# COSMIC

./: .gitignore  .gitignore.cosmic-optim  CONTRIBUTING.md  LICENSE.cosmic-optim  Makefile  README.md  benchmark_llm_finetune.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
cosmic/: __init__.py  _logging.py  optim.py
cosmic/extension/: __init__.py  build.py
csrc/: cosmic_bindings.cpp  cosmic_fused.hpp  quant4.hpp  signals.hpp
tests/: test_correctness.py  test_extension_cpu.py  test_import.py  test_optimizer_api.py  test_quant4_cpu.py  test_tier_logic.py
