[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = "CPU-only PyTorch optimizer extension for research and future production use."
authors = ["Cosmic Optim Contributors <devnull@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cosmic" }]
include = [
    { path = "csrc", format = "sdist" },
    { path = "csrc", format = "wheel" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = ">=2.1,<3.0"
ninja = ">=1.11,<2.0"
transformers = ">=4.40,<5.0"
datasets = ">=2.19,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
ruff = ">=0.6.0,<0.8.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
